Fixed spacing issues on main page

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -5,6 +5,8 @@
     padding: 60px;
     background-color: #f2f2f2;
     color:#000000;
+    font-family: 'Ephesis', sans-serif;
+    font-size: xxx-large;
 }
 
 .body {
